--- a/template/src/index.html
+++ b/template/src/index.html
@@ -31,7 +31,7 @@
 					<div class="logo-element">
 						<a href="/" target="_self" title="Aníbal Sánchez - Lost and Found in Computation"
 						 rel="home" class="font-bold text-white no-underline">
-							Aníbal Sánchez 5</a>
+							Aníbal Sánchez</a>
 					</div>
 					<!-- languages-block -->
 					<div class="languages-element">
