--- a/template/src/styles.css
+++ b/template/src/styles.css
@@ -1,237 +1,12 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
 
-/* @import url('https://fonts.googleapis.com/css?family=Muli'); with fallback */
+@import url("https://fonts.googleapis.com/css?family=Muli");
+@import "./base.css";
 
-/* vietnamese */
-@font-face {
-  font-family: 'Muli';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Muli Regular'), local('Muli-Regular'), url(https://fonts.gstatic.com/s/muli/v16/7Auwp_0qiz-afT3GLRrX.woff2) format('woff2');
-  unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
-  font-display: fallback;
-}
+@import "tailwindcss/components";
+@import "./components.css";
 
-/* latin-ext */
-@font-face {
-  font-family: 'Muli';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Muli Regular'), local('Muli-Regular'), url(https://fonts.gstatic.com/s/muli/v16/7Auwp_0qiz-afTzGLRrX.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-  font-display: fallback;
-}
-/* latin */
-@font-face {
-  font-family: 'Muli';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Muli Regular'), local('Muli-Regular'), url(https://fonts.gstatic.com/s/muli/v16/7Auwp_0qiz-afTLGLQ.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  font-display: fallback;
-}
+@import "tailwindcss/utilities";
+@import "./utilities.css";
 
-/* / @import url('https://fonts.googleapis.com/css?family=Muli'); with fallback */
 
-body {
-  @apply font-sans leading-normal bg-white
-}
-
-a {
-  @apply text-link no-underline
-}
-
-p {
-  @apply mt-6
-}
-
-p.site-description {
-  @apply text-sm text-white mt-0
-}
-
-h2 {
-  @apply text-3xl mb-3 font-bold
-}
-
-h3 {
-  @apply text-2xl my-8 font-bold
-}
-
-h4 {
-  @apply text-xl mt-6 mb-3 tracking-wide font-bold
-}
-
-h5 {
-  @apply text-lg mt-4 mb-2 tracking-wide font-bold
-}
-
-ul {
-  @apply my-6 list-disc pl-4;
-  padding-inline-start: 1rem
-}
-
-li>ul {
-  @apply mt-0
-}
-
-figcaption {
-  @apply text-sm
-}
-
-blockquote {
-  @apply bg-grey-light rounded-lg px-6 py-4 my-4 italic
-}
-
-blockquote p {
-  @apply mt-2
-}
-
-.header-background {
-  @apply bg-grey-dark overflow-hidden opacity-90
-}
-
-.navigation-block {
-  @apply static
-}
-
-.logo-element, .languages-element {
-  @apply flex-initial
-}
-
-.logo-element {
-  @apply w-5/6 text-2xl
-}
-
-.languages-element ul {
-  @apply flex items-center mt-0 ml-6 pl-6 list-none p-0
-}
-
-.languages-element li {
-  @apply list-none p-0
-}
-
-.languages-element img {
-  @apply px-2 py-2
-}
-
-.about-me img {
-  @apply rounded-full
-}
-
-.main-container-block {
-  @apply static text-grey
-}
-
-.top-32-lite {
-  top: 7rem
-}
-
-.breadcrumbs-block {
-  @apply flex-row pr-4 bg-grey-light opacity-50 rounded
-}
-
-.breadcrumbs-block ul {
-  @apply flex flex-wrap list-none p-0 mt-0 px-2 py-4 mb-6
-}
-
-.breadcrumbs-block li {
-  @apply flex-initial whitespace-no-wrap px-2 py-2
-}
-
-.divider img {
-  @apply inline-block
-}
-
-.search-block {
-  @apply pt-4
-}
-
-.blog-block .items-leading {
-  @apply pb-16
-}
-
-.blog-block .items-row {
-  @apply pb-8
-}
-
-.blog-block .items-leading img,
-.blog-block .item img {
-  @apply my-4 border border-link rounded-lg
-}
-
-.blog-block .items-leading code,
-.blog-block .item-page code,
-.blog-block .item code {
-  @apply block p-4
-}
-
-.blog-block .article-info-term {
-  display: none
-}
-
-.blog-block dl.article-info dd {
-  @apply text-lg
-}
-
-.tags li {
-  @apply inline rounded-full bg-blue-happy px-2 py-1 text-xs mr-3
-}
-
-.tags li a {
-  @apply text-white
-}
-
-.pagination li {
-  @apply px-3 py-4
-}
-
-.tags {
-  @apply list-none p-0
-}
-
-.pagination {
-  @apply mb-4
-}
-
-.pagination p {
-  @apply text-sm text-right
-}
-
-.pagination ul {
-  @apply inline-block list-none p-0 text-sm shadow rounded mt-4
-}
-
-.pagination li {
-  @apply text-center inline-block p-0
-}
-
-.pagination li span,
-.pagination li a {
-  @apply px-2 py-2 inline-block
-}
-
-.pagination li span {
-  @apply opacity-25
-}
-
-.footer-element {
-  @apply bg-oldlace text-center text-orange-hot
-}
-
-.footer-element a {
-  @apply text-link no-underline
-}
-
-.aside-block .moduletable {
-  @apply rounded overflow-hidden shadow-lg bg-white p-4 mt-12
-}
-
-.aside-block .moduletable ul {
-  list-style-type: circle;
-}
-
-.aside-block .moduletable h3 {
-  @apply bg-gray-200 rounded-full text-center px-3 py-1
-}
