--- a/template/src/index.html
+++ b/template/src/index.html
@@ -783,6 +783,29 @@
 									</ul>
 								</div>
 
+								<ul class="pager pagenav">
+									<li class="previous">
+										<a class="hasTooltip"
+											title="FAQ - XT Tailwind for Joomla"
+											aria-label="Previous article: FAQ - XT Tailwind for Joomla"
+											href="/en/10-blogging/lost-and-found/55-faq-xt-tailwind-for-joomla.html"
+											rel="prev">
+											<span class="icon-chevron-left"
+												aria-hidden="true"></span> <span
+												aria-hidden="true">Prev</span> </a>
+									</li>
+									<li class="next">
+										<a class="hasTooltip"
+											title="Updating to Tailwind CSS v1.0.0-beta.1 in Joomla "
+											aria-label="Next article: Updating to Tailwind CSS v1.0.0-beta.1 in Joomla "
+											href="/en/10-blogging/lost-and-found/50-updating-to-tailwind-css-v1-0-0-beta-1-in-joomla.html"
+											rel="next">
+											<span aria-hidden="true">Next</span> <span
+												class="icon-chevron-right"
+												aria-hidden="true"></span> </a>
+									</li>
+								</ul>
+
 							</div>
 							<!-- End Content -->
 						</div>
