feat(news): Update to the latest TailwindCSS 1.2 UI Pagination

--- a/template/src/index.html
+++ b/template/src/index.html
@@ -758,7 +758,7 @@
 										<li class="pagination-prev"><span
 												class="pagenav">Prev</span></li>
 										<li><span class="pagenav">1</span></li>
-										<li><a href="/en/?start=4" class="pagenav">2</a>
+										<li><a href="/en/?start=4" class="pagenav hover:text-gray-400 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-500">2</a>
 										</li>
 										<li><a href="/en/?start=8" class="pagenav">3</a>
 										</li>
