--- a/template/src/components.css
+++ b/template/src/components.css
@@ -71,7 +71,7 @@
     @apply block p-4;
 
     /* Force the padding */
-    padding: 1rem!important;
+    padding: 1rem !important;
   }
 
   dl.article-info dd {
@@ -103,7 +103,7 @@
   }
 }
 
-.pagination {
+/* .pagination {
   @apply mb-4;
 
   li {
@@ -125,25 +125,101 @@
   ul {
     @apply inline-block list-none p-0 text-sm shadow rounded mt-4;
   }
-}
+} */
 
-.pager {
-  @apply inline-block list-none p-0 text-sm shadow rounded mt-4;
+.pagination {
+  @apply flex-1 flex justify-between;
 
-  li {
-    @apply px-3 py-4 text-center inline-block p-0;
+  p.counter {
+    @apply hidden;
   }
 
-  li a {
-    @apply px-2 inline-block;
+  ul {
+    @apply flex-1 flex justify-between pl-0;
+  }
+
+  li {
+    @apply hidden relative items-center border border-gray-300 -ml-px bg-white text-sm leading-5 font-medium text-gray-500 rounded-md;
+  }
+
+  li.pagination-prev,
+  li.pagination-next {
+    @apply inline-flex;
   }
 
   li span {
-    @apply px-2 py-2 inline-block;
+    @apply px-3 py-2;
   }
 
-  p {
-    @apply text-sm text-right;
+  li a {
+    @apply px-3 py-2 transition ease-in-out duration-150;
+  }
+
+  .pagenav:active {
+    /* active:bg-gray-100 active:text-gray-500*/
+    @apply bg-gray-100 text-gray-500;
+  }
+  .pagenav:focus {
+    /* focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue */
+    @apply z-10 outline-none border-blue-300 shadow-outline-blue;
+  }
+  .pagenav:hover {
+    /* hover:text-gray-400 */
+    @apply text-gray-400;
+  }
+
+  /* sm:flex-1 sm:flex sm:items-center sm:justify-between */
+  @media (min-width: 640px) {
+    @apply items-center;
+
+    ul {
+      @apply relative z-0 flex-none inline-flex shadow-sm;
+    }
+
+    li {
+      @apply inline-flex rounded-none;
+    }
+
+    li a {
+      @apply -ml-px;
+    }
+
+    p.counter {
+      @apply block m-0 text-sm leading-5 text-gray-700;
+    }
+
+    ul:first-child {
+      @apply ml-0;
+    }
+
+    li.pagination-start {
+      @apply rounded-l-md;
+    }
+
+    li.pagination-end {
+      @apply rounded-r-md;
+    }
+  }
+}
+
+.pager {
+  @apply flex-1 flex justify-between pl-0;
+
+  li {
+    @apply relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white;
+  }
+
+  a:active {
+    /* active:bg-gray-100 active:text-gray-500*/
+    @apply bg-gray-100 text-gray-500;
+  }
+  a:focus {
+    /* focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue */
+    @apply z-10 outline-none border-blue-300 shadow-outline-blue;
+  }
+  a:hover {
+    /* hover:text-gray-400 */
+    @apply text-gray-400;
   }
 }
 
