feat(xt-renderers-for-joomla): Integrate the new library to manage the Renderers

--- a/template/templateDetails.xml
+++ b/template/templateDetails.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <extension type="template" version="3.8" client="site" method="upgrade">
   <name>XT Tailwind CSS</name>
-  <version>3.4.0</version>
-  <creationDate>2020-05-26</creationDate>
+  <version>3.5.0</version>
+  <creationDate>2020-06-05</creationDate>
 
 	<author>Extly, CB</author>
 	<authorEmail>team@extly.com</authorEmail>
@@ -33,8 +33,6 @@ XT Tailwind - My Blog template, based on Tailwind CSS.
     <filename>template_thumbnail.png</filename>
     <filename>templateDetails.xml</filename>
     <filename>webpack.config.js</filename>
-    <filename>XTHtmlAssetsBodyRenderer.php</filename>
-    <filename>XTHtmlAssetsRenderer.php</filename>
   </files>
   <languages>
     <language tag="en-GB">language/en-GB/en-GB.tpl_xttailwind.ini</language>
@@ -52,8 +50,13 @@ XT Tailwind - My Blog template, based on Tailwind CSS.
     <fields name="params">
       <fieldset name="advanced">
         <field name="logoTitle" type="text" default="" label="Logo Title" filter="string"/>
-        <field name="siteDescription" type="text" default="" label="JGLOBAL_DESCRIPTION" description="JGLOBAL_SUBHEADING_DESC" filter="string"/>
-        <field name="headScripts" type="textarea" default="" label="Head Scripts" filter="raw" rows="24" cols="120" class="input-xxlarge"/>
+        <field name="siteDescription" type="text" default="" label="JGLOBAL_DESCRIPTION"
+          description="JGLOBAL_SUBHEADING_DESC" filter="string"/>
+        <field name="headScripts" type="textarea" default="" label="Head Scripts" filter="raw" rows="6" cols="120"
+          class="input-xxlarge"/>
+        <field name="allowedScriptsAndStylesheets" type="textarea" default="recaptcha, schema.org, application/ld+json" label="Allowed CMS Scripts and Stylesheets"
+          filter="raw" rows="6" cols="120" class="input-xxlarge"
+          description="List of keywords to allow the inclusion of core scripts and stylesheets. * to allow everything."/>
       </fieldset>
     </fields>
   </config>
