--- a/template/src/blog-post.html
+++ b/template/src/blog-post.html
@@ -408,7 +408,7 @@
 						</div>
 
 						<!-- blog-block -->
-						<div class="blog-block">
+						<div class="blog-block prose prose-xl">
 							<!-- Begin Content -->
 							<div id="system-message-container">
 							</div>
