--- a/template/src/index.html
+++ b/template/src/index.html
@@ -363,7 +363,7 @@
 							<div id="system-message-container">
 							</div>
 
-							<div class="blog-featured" itemscope
+							<div class="blog-featured prose prose-xl" itemscope
 								itemtype="https://schema.org/Blog">
 								<div class="items-leading clearfix">
 									<div class="leading-0 clearfix" itemprop="blogPost"
